# jsonmerge-c-

./: CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md
.devcontainer/: devcontainer.json
data/: document1.json  document1.patch.json  document1.result.json
include/bouncmpe/: jsonmerge.hpp
src/: jsonmerge.cpp
tests/: CMakeLists.txt  jsonmerge.test.cpp
